First editing of index site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Scout and His Walks</title>
 </head>
 <body>
-    <img src="Pictures for VSCode/Scout 1">
-    
+    <img src="Users\jella\OneDrive\Desktop\Pictures for VSCode\Scout 1">
+    <h1>Scout's Walking Habits</h1>
+    <nav>
+        
+    </nav>
+    <h2>Who is Scout?</h2>
+    <main>Scout is a German Shepherd-mix who loves many things - cardboard, whipped cream, chasing cats, backscratches, and walks. His two-legged parents have had him for 4 years and are obsessed with taking him on hikes and walks. Yet, Scout is unique - his walks are never the same. Here, we'll document Scout's unique walking habits.</main>
+
+
 </body>
 </html>
