--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
     <img src="Users\jella\OneDrive\Desktop\Pictures for VSCode\Scout 1">
     <h1>Scout's Walking Habits</h1>
     <nav>
-        
+       
     </nav>
     <h2>Who is Scout?</h2>
-    <main>Scout is a German Shepherd-mix who loves many things - cardboard, whipped cream, chasing cats, backscratches, and walks. His two-legged parents have had him for 4 years and are obsessed with taking him on hikes and walks. Yet, Scout is unique - his walks are never the same. Here, we'll document Scout's unique walking habits.</main>
+    <img src="https://www.facebook.com/photo.php?fbid=6318965958162310&set=pb.100001469057434.-2207520000.&type=3">
+    <main>Scout is a German Shepherd-mix who loves many things - 
+        cardboard, whipped cream, chasing cats, backscratches, and walks. 
+        His two-legged parents have had him for 4 years and are obsessed 
+        with taking him on hikes and walks. 
+        Yet, Scout is unique - his walks are never the same. 
+        Here, we'll document Scout's unique walking habits.</main>
+    <section>
+        <h2>Where does Scout like to go?</h2>
+        <ul>
+            <li>The beach</li>
+            <li>The park</li>
+            <li>Local trails</li>
+            <li>Mountains</li>
+        </ul>
+    </section>
 
 
 </body>
