rough draft #1 is done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,24 @@
             <li>Mountains</li>
         </ul>
     </section>
-
+    <section>
+        <h2>What does Scout do?</h2>
+        <ul>
+            <li>Smell EVERYTHING</li>
+            <li>Look for friends</li>
+            <li>Get the zoomies</li>
+        </ul>
+    </section>
+    <section>
+        <h2>What does Scout dislike?</h2>
+        <ul>
+            <li>Water falling from the sky</li>
+            <li>Not stopping for smells</li>
+            <li>Bees/Flies</li>
+            <li>The neighborhood cat, Mowgli</li>
+        </ul>
+    </section>
+<footer>Jenna Rank, coding102</footer>
 
 </body>
 </html>
