snow picture of Scout test

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Scout and His Walks</title>
 </head>
 <body>
-    <img src="Users\jella\OneDrive\Desktop\Pictures for VSCode\Scout 1">
+    <img src="https://www.instagram.com/p/Cov3Yumr2Ac/" alt="Scout a GSD mix sitting in the snow, looking at the camera">
     <h1>Scout's Walking Habits</h1>
     <nav>
-       
+       <ul>
+            <li><a href="https://jenran24.github.io/reading-notes/">Link to Reading Notes Page</a></li>
+            <li><a href="#"></a> What Scout Does</li>
+            <li><a href="#"></a> What Scout Hates</li>
+       </ul>
     </nav>
     <h2>Who is Scout?</h2>
-    <img src="https://www.facebook.com/photo.php?fbid=6318965958162310&set=pb.100001469057434.-2207520000.&type=3">
+    <img src="https://www.facebook.com/photo.php?fbid=6318965958162310&set=pb.100001469057434.-2207520000.&type=3" alt="Scout, a handsome GSD Shepherd-mix">
     <main>Scout is a German Shepherd-mix who loves many things - 
         cardboard, whipped cream, chasing cats, backscratches, and walks. 
         His two-legged parents have had him for 4 years and are obsessed 
