--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Scout and His Walks</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <img src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcTo7Ip1_kUvkTHPE7QSLlCr_-hYsl8ts_HQ997mQ14iiD3mbds6IZCz_kC_f2VAxM4bsgvbaegk70M3hXQ" alt="Not actually Scout but I haven't figured that out yet">
     <h1>Scout's Walking Habits</h1>
@@ -24,7 +26,7 @@
         Yet, Scout is unique - his walks are never the same. 
         Here, we'll document Scout's unique walking habits.</main>
     <section>
-        <h2>Where does Scout like to go?</h2>
+        <h2 color:>Where does Scout like to go?</h2>
         <ul>
             <li>The beach</li>
             <li>The park</li>
