--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
         <meta name="viewport" content="width=device-width">
         <title>Scout and His Walks</title>
      <link rel="stylesheet" href="style.css">
+     <link rel="app.js" href="app.js"
     </head>
-
-    <script>
-        console.log("I am in the HTML")
-        alert("Welcome! I hope you love dogs!")
-    </script>
 
     <body>
         <img id="title-dog" src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcTo7Ip1_kUvkTHPE7QSLlCr_-hYsl8ts_HQ997mQ14iiD3mbds6IZCz_kC_f2VAxM4bsgvbaegk70M3hXQ" alt="Not actually Scout but I haven't figured that out yet">
