--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <title>Scout and His Walks</title>
      <link rel="stylesheet" href="style.css">
-     <link rel="app.js" href="app.js"
+     <script src="app.js"></script>
     </head>
 
     <body>
