Trying to debug this a bit

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
         <meta name="viewport" content="width=device-width">
         <title>Scout and His Walks</title>
      <link rel="stylesheet" href="style.css">
-     <script src="app.js"></script>
     </head>
+
+    <script>
+        console.log("I am in the HTML");
+    alert("Welcome! I hope you love Scout!");
+
+    const usersName = prompt("Would you rather have a dog or a cat?");
+    console.log(usersName);
+
+    document.write(usersName + " is a great choice!");
+    </script>
 
     <body>
         <img id="title-dog" src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcTo7Ip1_kUvkTHPE7QSLlCr_-hYsl8ts_HQ997mQ14iiD3mbds6IZCz_kC_f2VAxM4bsgvbaegk70M3hXQ" alt="Not actually Scout but I haven't figured that out yet">
