--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <li>The neighborhood cat, Mowgli</li>
                 </ul>
         </section>
+        <script>rateMyPage();</script>
     <footer>Jenna Rank, coding102</footer>
 
     </body>
