--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
      <script src="app.js"></script>
     </head>
 
-    
-
     <body>
-        <img id="flower_scout" src="flowerscout.jpg" alt="Scout laying in an aisle of tulips">
+        <img id="flower-scout" src="flowerscout.jpg" alt="Scout laying in an aisle of tulips">
         <h1>Scout's Walking Habits</h1>
         <nav>
-         <ul>
-            <li><a href="https://jenran24.github.io/reading-notes/">Link to Reading Notes Page</a></li>
-            <li><a href="#"></a> What Scout Does</li>
-            <li><a href="#"></a> What Scout Hates</li>
-        </ul>
-     </nav>
+            <ul>
+                <li><a href="https://jenran24.github.io/reading-notes/">Link to Reading Notes Page</a></li>
+                <li><a href="#"></a> What Scout Does</li>
+                <li><a href="#"></a> What Scout Hates</li>
+            </ul>
+        </nav>
      <script>getUsername();</script>
         <h2>Who is Scout?</h2>
         <img id="baby-scout" src="babyscout.JPG" alt="Scout as an adorable puppy next to his first toy">
