--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Scout and His Walks</title>
-        <script>const usersName = getUsername();</script>
+        <script>const usersName = getUsersname();</script>
      <link rel="stylesheet" href="style.css">
      <script src="app.js"></script>
     </head>
