I will be so happy but upset if all it was were the semi colons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#"></a> What Scout Hates</li>
             </ul>
         </nav>
-     <script>getUsername();</script>
+     <script>getUsersname();</script>
         <h2>Who is Scout?</h2>
         <img id="baby-scout" src="babyscout.JPG" alt="Scout as an adorable puppy next to his first toy">
         <main>Scout is a German Shepherd-mix who loves many things - 
