silly mistake and forgetting to link js file

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
      <link rel="stylesheet" href="style.css">
     </head>
 
-    <script>const usersName = getUsersname();</script>
-    <script>getUsersname();</script>
-    
     <body>
-        
+        <script src="app.js>"></script>
         <img id="flower-scout" src="flowerscout.jpg" alt="Scout laying in an aisle of tulips">
         <h1>Scout's Walking Habits</h1>
         <nav>
